# web-scrapper

./: .gitignore  Cargo.toml  app_config.toml  readme.md
src/: main.rs
src/website/: Comment.rs  List.rs  article.rs  configuration.rs  data.rs  mod.rs  parser.rs  website_getter.rs
