[package]
name = "web-scrapper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#scraper = "0.12.0"
select = "0.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.5"
nos = "0.1.11"

serde = { version = "1.0", features = ["derive"] }